<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="permission_read_attachment_label" msgid="9208086010625033590">"读取电子邮件附件"</string>
    <string name="permission_read_attachment_desc" msgid="6592948507403743153">"允许此应用读取您的电子邮件附件。"</string>
    <string name="permission_access_provider_label" msgid="378256653525377586">"访问电子邮件服务提供商数据"</string>
    <string name="permission_access_provider_desc" msgid="2221907862438022705">"允许此应用访问您的电子邮件数据库，包括已收邮件、已发邮件、用户名和密码。"</string>
    <string name="compose_title" msgid="427986915662706899">"写邮件"</string>
    <string name="debug_title" msgid="5175710493691536719">"调试"</string>
    <string name="next_action" msgid="3931301986364184415">"下一步"</string>
    <string name="okay_action" msgid="8365197396795675617">"确定"</string>
    <string name="cancel_action" msgid="6967435583794021865">"取消"</string>
    <string name="previous_action" msgid="5181616311579820981">"上一步"</string>
    <string name="send_action" msgid="1729766205562446418">"发送"</string>
    <string name="reply_action" msgid="4262472229221507619">"回复"</string>
    <string name="reply_all_action" msgid="6192179825726332152">"全部回复"</string>
    <string name="delete_action" msgid="8421026208288857155">"删除"</string>
    <string name="forward_action" msgid="669174181042344116">"转发"</string>
    <string name="favorite_action" msgid="4664259801498253756">"加星标"</string>
    <string name="done_action" msgid="7497990549515580249">"完成"</string>
    <string name="create_action" msgid="3062715563215392251">"新建"</string>
    <string name="delete_quick_response_action" msgid="3076922270182841978">"删除"</string>
    <string name="quick_responses_empty_view" msgid="1693308598242828422">"没有快速回复"</string>
    <string name="discard_action" msgid="6532206074859505968">"放弃"</string>
    <string name="save_draft_action" msgid="6413714270991417223">"保存草稿"</string>
    <string name="show_quick_text_list_dialog_action" msgid="4136018559611145202">"插入快速回复"</string>
    <string name="read_action" msgid="4701484794504781686">"标记为已读"</string>
    <string name="unread_action" msgid="6280399049357552826">"标记为未读"</string>
    <string name="set_star_action" msgid="4660317166196258160">"加注星标"</string>
    <string name="remove_star_action" msgid="6689770999647007163">"删除星标"</string>
    <string name="refresh_action" msgid="5951383001436708175">"刷新"</string>
    <string name="add_account_action" msgid="8835736309476033727">"添加帐户"</string>
    <string name="compose_action" msgid="4045702519637388045">"写邮件"</string>
    <string name="search_action" msgid="6325101454876682308">"搜索"</string>
    <string name="account_settings_action" msgid="4494079183315085171">"帐户设置"</string>
    <string name="settings_action" msgid="6334807007967459412">"设置"</string>
    <string name="mailbox_settings_action" msgid="8008375875310554776">"同步选项"</string>
    <string name="mark_as_unread_action" msgid="3766298115778767554">"标记为未读"</string>
    <string name="move_action" msgid="3059189775933985898">"移动"</string>
    <string name="newer_action" msgid="8950909456802330593">"后一封邮件"</string>
    <string name="older_action" msgid="4504015635360605471">"前一封邮件"</string>
    <string name="plus_cc_label" msgid="3365150001259912183">"+抄送/密送"</string>
    <string name="add_cc_bcc_menu" msgid="4757145078498200242">"添加抄送/密送地址"</string>
    <string name="add_file_attachment" msgid="2203398371671979481">"添加附件"</string>
    <string name="close_action" msgid="533058985745238100">"关闭"</string>
    <string name="message_list_send_pending_messages_action" msgid="8502942186631824114">"发送所有邮件"</string>
    <string name="choose_attachment_dialog_title" msgid="81937507117528954">"选择附件"</string>
    <string name="move_to_folder_dialog_title" msgid="2614318192482193898">"移至"</string>
    <string name="status_loading_messages" msgid="6552307237621292344">"正在载入邮件..."</string>
    <string name="status_network_error" msgid="2611654064403817391">"发生连接问题。"</string>
    <string name="error_loading_message_body" msgid="6775234299515596760">"无法加载邮件文本。可能是邮件过大导致无法查看。"</string>
  <plurals name="move_messages">
    <item quantity="one" msgid="320885379869442589">"移动邮件"</item>
    <item quantity="other" msgid="371256717624461324">"移动邮件"</item>
  </plurals>
    <string name="cannot_move_protocol_not_supported_toast" msgid="6558083148128616292">"POP3 帐户不支持移动邮件的操作。"</string>
    <string name="cannot_move_multiple_accounts_toast" msgid="7922594026384944163">"所选内容包含多个帐户的邮件，因此无法进行移动。"</string>
    <string name="cannot_move_special_mailboxes_toast" msgid="7093107954841896970">"无法移动“草稿”、“发件箱”和“已发邮件”中的邮件。"</string>
  <plurals name="notification_new_one_account_fmt">
    <item quantity="one" msgid="3422945912787702191">"<xliff:g id="UNREAD_MESSAGE_COUNT">%1$d</xliff:g> 封未读邮件 (<xliff:g id="ACCOUNT">%2$s</xliff:g>)"</item>
    <item quantity="few" msgid="6543078667692990869">"<xliff:g id="UNREAD_MESSAGE_COUNT">%1$d</xliff:g> 封未读邮件 (<xliff:g id="ACCOUNT">%2$s</xliff:g>)"</item>
    <item quantity="other" msgid="6937673814351448076">"<xliff:g id="UNREAD_MESSAGE_COUNT">%1$d</xliff:g> 封未读邮件 (<xliff:g id="ACCOUNT">%2$s</xliff:g>)"</item>
  </plurals>
  <plurals name="notification_new_multi_account_fmt">
    <item quantity="few" msgid="1991747245324120305">"在 <xliff:g id="NUMBER_ACCOUNTS">%d</xliff:g> 个帐户中"</item>
    <item quantity="other" msgid="2723797835410343458">"在 <xliff:g id="NUMBER_ACCOUNTS">%d</xliff:g> 个帐户中"</item>
  </plurals>
    <string name="notification_to_account" msgid="2078557719010667913">"收件人：<xliff:g id="RECEIVER_NAME">%1$s</xliff:g>"</string>
    <string name="notification_multiple_new_messages_fmt" msgid="2606649762841566104">"<xliff:g id="ID_1">%1$d</xliff:g> 封新邮件"</string>
    <string name="account_name_display_all" msgid="837218861494831989">"所有帐户"</string>
  <plurals name="number_of_accounts">
    <item quantity="one" msgid="6343953132237244947">"<xliff:g id="NUM_ACCOUNTS">%1$d</xliff:g> 个帐户"</item>
    <item quantity="other" msgid="8548760449976444566">"<xliff:g id="NUM_ACCOUNTS">%1$d</xliff:g> 个帐户"</item>
  </plurals>
    <string name="mailbox_name_display_inbox" msgid="3542327124749861736">"收件箱"</string>
    <string name="mailbox_name_display_outbox" msgid="2826214174661417662">"发件箱"</string>
    <string name="mailbox_name_display_drafts" msgid="4868718300700514319">"草稿"</string>
    <string name="mailbox_name_display_trash" msgid="9139069064580630647">"已删除邮件"</string>
    <string name="mailbox_name_display_sent" msgid="3426058998191869523">"已发送邮件"</string>
    <string name="mailbox_name_display_junk" msgid="9046762505977999288">"垃圾邮件"</string>
    <string name="mailbox_name_display_unread" msgid="1015674989793998695">"未读邮件"</string>
    <string name="picker_mailbox_name_all_unread" msgid="6392491216581687644">"收件箱（未读）"</string>
    <string name="picker_mailbox_name_all_inbox" msgid="2277030979530376085">"收件箱（全部）"</string>
    <string name="picker_combined_view_fmt" msgid="6276294768978512737">"合并的视图 (<xliff:g id="COUNT">%s</xliff:g>)"</string>
  <plurals name="picker_combined_view_account_count">
    <item quantity="one" msgid="380235084337895804">"<xliff:g id="ACCOUNT_COUNT">%d</xliff:g> 个帐户"</item>
    <item quantity="other" msgid="4145163147488719025">"<xliff:g id="ACCOUNT_COUNT">%d</xliff:g> 个帐户"</item>
  </plurals>
    <string name="debug_version_fmt" msgid="6160213145745376955">"版本：<xliff:g id="VERSION">%s</xliff:g>"</string>
    <string name="account_folder_list_summary_inbox" msgid="7518263761297423255">"收件箱"</string>
    <string name="account_folder_list_summary_starred" msgid="3134312269246375723">"已加星标的内容"</string>
    <string name="account_folder_list_summary_drafts" msgid="5514845993247300437">"草稿"</string>
    <string name="account_folder_list_summary_outbox" msgid="3059836696049399377">"发件箱"</string>
    <string name="mailbox_list_account_selector_combined_view" msgid="1556327299894225044">"合并的视图"</string>
    <string name="mailbox_list_account_selector_show_all_folders" msgid="4185052839366909439">"显示所有文件夹"</string>
    <string name="mailbox_list_account_selector_account_header" msgid="4261295503836387876">"帐户"</string>
    <string name="mailbox_list_account_selector_mailbox_header_fmt" msgid="3320144348694625092">"最近访问的文件夹 (<xliff:g id="EMAIL_ADDRESS">%s</xliff:g>)"</string>
    <string name="mailbox_list_user_mailboxes" msgid="484260487104726379">"所有文件夹"</string>
    <string name="mailbox_list_recent_mailboxes" msgid="8922653040520361032">"近期文件夹"</string>
    <string name="message_subject_description" msgid="3597047441062021199">"主题"</string>
    <string name="message_is_empty_description" msgid="4004644319382041459">"无主题"</string>
    <string name="message_list_load_more_messages_action" msgid="7428302707908825692">"载入更多邮件"</string>
  <plurals name="message_view_selected_message_count">
    <item quantity="one" msgid="5064657358375178519">"已选定 <xliff:g id="MESSAGE_COUNT">%d</xliff:g> 封"</item>
    <item quantity="other" msgid="7901361399231876038">"已选定 <xliff:g id="MESSAGE_COUNT">%d</xliff:g> 封"</item>
  </plurals>
    <string name="message_list_no_messages" msgid="7846910091922523867">"无邮件"</string>
    <string name="message_compose_to_hint" msgid="2891895306418177013">"收件人"</string>
    <string name="message_compose_cc_hint" msgid="8481884461031434144">"抄送"</string>
    <string name="message_compose_bcc_hint" msgid="9177337492358841680">"密送"</string>
    <string name="message_compose_subject_hint" msgid="6993487234024160782">"主题"</string>
    <string name="message_compose_from_label" msgid="4084843296548498041">"发件人："</string>
    <string name="to" msgid="4392614766835725698">"收件人"</string>
    <string name="cc" msgid="7017720927911078193">"抄送"</string>
    <string name="bcc" msgid="3098643138241111579">"密送"</string>
    <string name="subject_hint" msgid="7253964583324677128">"主题"</string>
    <string name="body_hint" msgid="4279864165439577668">"撰写电子邮件"</string>
    <string name="message_compose_fwd_header_fmt" msgid="5181300290654579434">\n\n"-------- 原始邮件 --------"\n"主题：<xliff:g id="SUBJECT">%1$s</xliff:g>"\n"发件人：<xliff:g id="SENDER">%2$s</xliff:g>"\n"收件人：<xliff:g id="TO">%3$s</xliff:g>"\n"抄送：<xliff:g id="CC_0">%4$s</xliff:g>"\n\n</string>
    <string name="message_compose_reply_header_fmt" msgid="8815624773273454573">\n\n"<xliff:g id="SENDER">%s</xliff:g>编写："\n\n</string>
    <string name="message_compose_quoted_text_label" msgid="6950097435198536165">"包含引用文字"</string>
    <string name="message_compose_include_quoted_text_checkbox_label" msgid="8165567368956050390">"包含原文"</string>
    <string name="message_compose_error_no_recipients" msgid="4903715888250785486">"必须至少添加一个收件人。"</string>
    <string name="message_compose_error_invalid_email" msgid="1817633338629885643">"某些电子邮件地址无效。"</string>
    <string name="message_compose_attachment_size" msgid="4401081828287333647">"文件太大，无法附加。"</string>
    <string name="message_compose_insert_quick_response_list_title" msgid="5314107302508728189">"插入快速回复"</string>
    <string name="message_compose_display_name" msgid="6415258924917140704">"<xliff:g id="NAME">%1$s</xliff:g>以及其他 <xliff:g id="NUMBER">%2$d</xliff:g> 人"</string>
    <string name="message_view_to_label" msgid="6485191743265527381">"收件人："</string>
    <string name="message_view_cc_label" msgid="6322992216371163122">"抄送："</string>
  <string name="hcmail_to">收件人</string>
  <string name="hcmail_cc">抄送人</string>
  <string name="hcmail_send_action">发送</string>
  <string name="hcmail_subject_hint">邮件主题</string>
  <string name="hcmail_body_hint">邮件内容</string>
  <string name="hcmail_save_draft_action">存为草稿</string>
  <string name="hcmail_popup_contacts">联系人</string>
  <string name="hcmail_popup_address">通讯录</string>
  <string name="hcmail_receive_box">收件箱</string>
  <string name="hcmail_send_box">发件箱</string>
  <string name="hcmail_draft_box">草稿箱</string>
  <string name="hcmail_popup_str">取消</string>
</resources>