<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/hcmail_pop_line" />

    <TextView
        android:id="@+id/hcmail_popup_contacts"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/hcmail_popup_contacts"
        android:textColor="@color/hcmail_pop_text_blue_color"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/hcmail_pop_line" />

    <TextView
        android:id="@+id/hcmail_popup_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/hcmail_popup_address"
        android:textColor="@color/hcmail_pop_text_blue_color"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/hcmail_pop_line" />

    <TextView
        android:id="@+id/cancel_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/hcmail_popup_str"
        android:textColor="@color/hcmail_pop_text_color"
        android:textSize="16dp" />
</LinearLayout>