<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hcmail_write_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.android.hcframe.TopBarView
        android:id="@+id/hcmail_write_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/topbar_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/to_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dp"
                    android:layout_weight="1"
                    android:addStatesFromChildren="true"
                    android:background="@drawable/hcmail_message_compose_bg"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:contentDescription="@string/hcmail_to"
                        android:text="@string/hcmail_to"
                        android:textColor="@color/blue" />

                    <com.android.email.activity.AddressTextView
                        android:id="@+id/to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:imeOptions="actionNext|flagNoFullscreen"
                        android:inputType="textEmailAddress|textMultiLine"
                        android:minHeight="40dp"
                        android:paddingBottom="13dp"
                        android:paddingTop="13dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/hcmail_to_img"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="14dp"
                    android:background="@drawable/hcmail_message_compose_img_bg"
                    android:padding="10dp"
                    android:src="@drawable/hcmail_message_compose_img" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dp"
                    android:layout_weight="1"
                    android:addStatesFromChildren="true"
                    android:background="@drawable/hcmail_message_compose_other_bg"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/cc_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/hcmail_cc"
                        android:text="@string/hcmail_cc"
                        android:textColor="@color/blue" />

                    <com.android.email.activity.AddressTextView
                        android:id="@+id/cc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:imeOptions="actionNext|flagNoFullscreen"
                        android:inputType="textEmailAddress|textMultiLine"
                        android:minHeight="40dip"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/hcmail_cc_img"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="14dp"
                    android:background="@drawable/hcmail_message_compose_img_bg"
                    android:padding="10dp"
                    android:src="@drawable/hcmail_message_compose_img" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/hcmail_message_compose_line" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:hint="@string/hcmail_subject_hint"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textEmailSubject|textAutoCorrect|textCapSentences|textImeMultiLine|textMultiLine"
                android:minHeight="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorHint="@color/hcmail_message_view_text"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/hcmail_message_compose_line" />
            <com.android.hcframe.hctask.ScrollerListView
                android:id="@+id/attachment_container_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="#00000000"
                android:layout_weight="1"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:scrollbars="none"
                android:visibility="visible"/>
            <View
                android:id="@+id/hcmail_line"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:visibility="gone"
                android:background="@color/hcmail_message_compose_line" />

            <EditText
                android:id="@+id/body_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="top|left"
                android:hint="@string/hcmail_body_hint"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textAutoCorrect|textCapSentences|textImeMultiLine|textMultiLine"
                android:lineSpacingExtra="@dimen/line_spacing_extra"
                android:minHeight="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorHint="@color/hcmail_message_view_text"
                android:textSize="14sp" />

            <WebView
                android:id="@+id/web_view_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/hcmail_message_compose_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_attachment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@drawable/hcmail_message_compose_atta" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/hcmail_message_compose_line" />

        <TextView
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/hcmail_save_draft_action"
            android:drawableLeft="@drawable/hcmail_drafts"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="50dp"
            android:text="@string/hcmail_save_draft_action"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/send"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/blue"
            android:contentDescription="@string/hcmail_send_action"
            android:drawableLeft="@drawable/hcmail_message_compose_send"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/hcmail_send_action"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>